Release 2.4.1
- Fixed comment about possible values in settings_preset not containing newer ones.

- Changed comment about no_tracking setting to make it more correct.

- Built-In Java downloader now downloads Java 11 if user sets the built_in_java_version
to 11; this will automatically set to 11 if game_version is 1.16.4 or above

- Added GC settings & comments and recommendations for them.

- Added more auto-detecded server jar names support by default

- Fixed gencode adding Log4J config parameter to client code

- Fixed timings.verbose being false by default. This different than
printing settings on start-up, it actually adds more useful data to timing reports.

- Added old Java version warning for Java 11 too.

- Open jdk.internal.access if allow_module_access is true and when on
Java 12 or above.

- Added auto cleaning of old hsperfdata files on tmp.

- Added 256M and 128M support to survivor ratio

- Fixed UnsyncloadClass deprecation warning in Java 11

- Fixed gencode always exiting without pausing

- Added new JVM arguments to improve performance.

Signed-off-by: Mustafa ÖNCEL <support@lifemcserver.com>